# SeleniumScraping

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .spelling  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  settings.ini  tox.ini
src/SeleniumScraping/: __init__.py  base.py  descriptors.py  exceptions.py  filepaths.py
src/SeleniumScraping/development_testing/: Stash_Sqlite_Renamer.py  code_replaced_with_optimized_code.py  countries.py  dataclass_test.py  descriptors.py  development_testing.py  development_testing_new.py  development_testing_old.py  export_file.py_old  generate_iso.py  geocode.py  geocoding.py  history_file_test.py  history_test.py  history_testing.py  main_test.py  messages_test.py  mult_inheritance.py  multiprocessing.py  mutliprocessing.py  new_search_form.py  old_code.py  old_development_testing.py  possibly_deprecated_code.py  processing.py  pycountry_test.py  scrape_elements_old.py  scrape_elements_test.py  scrape_testing.py  scraping_optimized.py  shapefiles_testing.py  typings_test.py  utils.py  webscraper.py
src/SeleniumScraping/development_testing/tests/: test_app.py
src/SeleniumScraping/driver/: driverbase.py  history.py  main.py  navigate.py  records.py  safeguards.py  shapefiles.py  utils.py
src/SeleniumScraping/generate/: account.py  main.py  user.py  utils.py
src/SeleniumScraping/names/: .travis.yml  README.rst  __init__.py
src/SeleniumScraping/parser/: __init__.py  parsermain.py  processing.py  utils.py
