[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core>=1.0.0"]
[tool.poetry]
    authors = ["Tim Holzapfel"]
    classifiers = [
        "Environment :: Web Environment :: Mozilla",
        "Development Status :: 5 - Production/Stable",
    ]
    description = "Gather data for the social sciences"
    documentation = "https://seleniumscraping.readthedocs.io/en/latest/index.html"
    exclude = ["src/SeleniumScraping/develop_dir/**"]
    license = "Proprietary"
    name = "SeleniumScraping"
    packages = [{ include = "SeleniumScraping", from = "src" }]
    readme = "README.md"
    repository = "https://github.com/Tim-Lukas-H/SeleniumScraping"
    version = "1.0.0"
[tool.poetry.dependencies]
    black               = "*"
    fastparquet         = "*"
    func-timeout        = "*"
    furl                = "*"
    geopy               = "*"
    importlib-resources = "*"
    mypy                = "*"
    numexpr             = "*"
    numpy               = "*"
    openpyxl            = "*"
    pandas              = "*"
    progressbar2        = "*"
    psutil              = "*"
    pyarrow             = "*"
    pycodestyle         = "*"
    pycountry           = "*"
    pydocstyle          = "*"
    pyenchant           = "*"
    pylint              = "*"
    pypiwin32           = "*"
    pyshp               = "*"
    pytest              = "*"
    python              = ">=3.10,<3.11"
    python-dateutil     = "*"
    pytz                = "*"
    regex               = "*"
    selenium            = "*"
    spyder-kernels      = "^2.1.3"
    termcolor           = "*"
    typing-extensions   = "*"
    webdrivermanager    = "*"
    wheel               = "*"
[tool.poetry.extras]
    performance = ["numexpr", "fastparquet"]
[tool.poetry.scripts]
    SeleniumScraping = "SeleniumScraping.parser.parsermain:parse_main"
[tool.black]
    line-length = 78
[tool.pycln]
    all = true
[tool.pyright]
    reportUnnecessaryIsInstance = false
